# FromScratchTransformer

./: .gitignore  Cargo.toml  README.md  mnist.nn
src/: activation.rs  autograd.rs  dataset.rs  embeddings.rs  language.rs  loss.rs  main.rs  matrix.rs  mnist.rs  mod.rs  nn.rs  obw.rs  tensor.rs  vocab.rs  wikitext.rs
src/dataset/: distill.rs  mnist.rs  mod.rs  wikitext.rs
src/ml/: activation.rs  language.rs  loss.rs  mod.rs  nn.rs
src/tensor/: cpu.rs  mod.rs
