[package]
name = "nn"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
colored = "3.0.0"
indicatif = "0.18.0"
log = "0.4.27"
ordered-float = "5.0.0"
parquet = "56.0.0"
png = "0.17.16"
rand = "0.9.2"
rand_distr = "0.5.1"
sha2 = "0.10.9"
tikv-jemallocator = "0.6.0"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'
opt-level = 3
