[package]
name = "nn"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
atomic_float = "1.1.0"
colored = "3.0.0"
indicatif = "0.18.0"
mimalloc = "0.1.48"
parquet = "56.0.0"
png = "0.17.16"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'
opt-level = 3

[profile.benchmark]
inherits = 'release'
debug = true
